# Abacus

./: README.md  com.github.Aurnytoraink.Abacus.json  meson.build
data/: abacus.gresource.xml  com.github.Aurnytoraink.Abacus.appdata.xml.in  com.github.Aurnytoraink.Abacus.desktop.in  com.github.Aurnytoraink.Abacus.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
src/: abacus.in  main.py  meson.build  window.py
